--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,4 +9,58 @@ html{
     background-color: black;
     color: white;
     font-family: Verdana, sans-serif;
+    text-align: center;
+    padding: 20px;
+}
+
+.title h1{
+    font-size: 3.125rem;
+    font-weight: normal;
+    padding: 0px 2% 2% 2%;
+}
+
+
+.download, .camp p{
+    color: aquamarine;
+    padding-bottom: 10px;
+    text-decoration: underline;
+}
+section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+section .logo{
+    width: 65px;
+    padding: 10px;
+}
+
+article h1, .camp h1 {
+    font-weight: 300;
+    font-size: 2.625rem;
+    padding: 20px;
+
+}
+
+article p{
+    padding:20px;
+    font-size: 1.3125rem;
+    color: gray;
+}
+
+.camp img{
+    padding-bottom: 20px;
+}
+
+footer{
+    display: flex;
+    justify-content: flex-end;
+    color: gray;
+
+
+}
+
+footer i{
+    padding-right: 10px;
 }
